Agregamos logica favoritos

--- a/app/src/main/res/layout/recetaitem.xml
+++ b/app/src/main/res/layout/recetaitem.xml
@@ -38,6 +38,11 @@
                 android:layout_height="wrap_content"
                 android:id="@+id/preparacion"
                 android:text="TextPreparacion"/>
+            <ImageView
+                android:id="@+id/star"
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:src="@drawable/ic_star_black_24dp"/>
 
         </LinearLayout>
     </LinearLayout>
